# data-analytics-project-100

./: Copy1 _Проект_3.ipynb  Dash-utfpudxmfp8m8yii9kjqnkrhmr.ipynb  README.md  Untitled-1.py  Untitled.ipynb  ads.csv  ads.json  conversion.json  df_ads.xlsx  df_ads_total.xlsx  df_visits_grouped_not_bot.xlsx  out.json  out.xlsx  output_file.xlsx  presentation.pptx  pyproject.toml  unique_user_agents.xlsx  unique_user_agents_1.xlsx  ~$результаты.xlsx  Визуализация по вопросам проект 3.xlsx  Данные для презентации.xlsx  Песочница.ipynb  Проект_3.ipynb  результаты.xlsx
.ipynb_checkpoints/: Matplotlib-x4e5e5znk7fobp3id4owy97p7o-checkpoint.txt  README-checkpoint.md  Проект_3-2-checkpoint.py  Проект_3-Copy1-checkpoint.ipynb  Проект_3-checkpoint.ipynb
hexlet-code/: .env  ads.json  conversion.json  main.py  package-lock.json  package.json  pyproject.toml
hexlet-code/tests/: copy_main_1.py  main_3_final.py
