[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MaximManuyko <128226331+MaximManuyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "hexlet-code.main:run_all"
