[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MaximManuyko <128226331+MaximManuyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
requests = "^2.31.0"
matplotlib = "^3.8.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = "main:main"